--- a/templates/objectifs.html.twig
+++ b/templates/objectifs.html.twig
@@ -1,10 +1,30 @@
 <html lang="fr">
     {% block stylesheets %}
         <link rel="stylesheet" href="{{ asset('style/objectifs.css') }}">
+        <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+        <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
     {% endblock %}
     <body>
-        <div id="BodyObjectifs">
-            test
-        </div>
+        {% block body %}
+        <script src="https://kit.fontawesome.com/a398bc3145.js" crossorigin="anonymous"></script>
+            <div id="BodyObjectifs">
+
+                <div id="HeaderObjectifs">
+                    <a href="#">Catégories</a>
+                    <a href="#" id = "non_selected">Tous</a>
+                    <a href="#" id="BoutonAjout"><img src="{{asset('IMG/Button.png')}}" alt ="bouton ajout"></a>
+                </div>
+
+                <div id="Objectifs">
+                    <a href="#" id = "favorites"><img src="{{asset('IMG/favorites.png')}}" alt ="catégorie favoris"></a>
+                    <a href="#" id = "books"><img src="{{asset('IMG/books.png')}}" alt ="catégorie lecture"></a>
+                    <a href="#" id = "studies"><img src="{{asset('IMG/studies.png')}}" alt ="catégorie études"></a>
+                    <a href="#" id = "electronics"><img src="{{asset('IMG/electronics.png')}}" alt ="catégorie électronique"></a>
+                    <a href="#" id = "sport"><img src="{{asset('IMG/sport.png')}}" alt ="catégorie sport"></a>
+                    <a href="#" id = "programming"><img src="{{asset('IMG/programmation.png')}}" alt ="catégorie programmation"></a>
+                </div>
+
+            </div>
+        {% endblock %}
     </body>
 </html>
