--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -14,6 +14,7 @@
         {% block body %}
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
             <script src="https://kit.fontawesome.com/a398bc3145.js" crossorigin="anonymous"></script>
+            <a id="logout" href="./logout"><i class="fa-solid fa-right-from-bracket"></i><a>
             <h1>TITRE SITE</h1>
             <nav>
                 <hr/>
@@ -26,7 +27,7 @@
             </nav>
             <div id="user-infos">
 
-                <img id="profile_picture" src="{{asset('profile_pictures/' ~ profile_picture ~ '')}}" alt ="profile picture">
+                <img id="profile_picture" src="{{asset('profile_pictures/' ~ profile_picture ~ '')}}" alt="">
                 
                 <span id="username">{{username}}</span>
                 <button class="btn"><i class="fa fa-bell-o" aria-hidden="true"></i></button>
