--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -14,7 +14,7 @@
         {% block body %}
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
             <script src="https://kit.fontawesome.com/a398bc3145.js" crossorigin="anonymous"></script>
-            <a id="logout" href="./logout"><i class="fa-solid fa-right-from-bracket"></i><a>
+            <a id="logout" href="/logout"><i class="fa-solid fa-right-from-bracket"></i><a>
             <h1>TITRE SITE</h1>
             <nav>
                 <hr/>
@@ -38,10 +38,16 @@
                 </div>
                 <span id="niveau">Niveau {{level}}</span>
                 </br>
-                <button class="btn"><i class="fa-solid fa-gear"></i><span id="parametres"> Paramètres<span></button>
+                <a class="btn" href="/home/parametres"><i class="fa-solid fa-gear"></i><span id="parametres"> Paramètres<span></a>
             </div>
             <div id="subpage">
-                {{ include('objectifs.html.twig')}}
+                {% if page == 'parametres' %}
+                    {{ render(controller('App\\Controller\\ParametresController::parametres')) }}
+                {% endif %}
+                {% if page == 'objectifs' %}
+                    {{ render(controller('App\\Controller\\ObjectifsController::objectifs')) }}
+                {% endif %}
+                
             </div>
         {% endblock %}
     </body>
