--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -16,7 +16,7 @@
             label : 'Nom d\'utilisateur'
         }) }}
         {{ form_row(registrationForm.plainPassword, {
-            label: 'Mot de pase',
+            label: 'Mot de passe',
         }) }}
         {{ form_row(registrationForm.agreeTerms) }}
 
