--- a/templates/objectifs.html.twig
+++ b/templates/objectifs.html.twig
@@ -10,7 +10,7 @@
             <div id="HeaderObjectifs">
                 <a href="#">Catégories</a>
                 <a href="#" id = "non_selected">Tous</a>
-                <button type="button" class="btn" id="btn-ajout">Nouvel Objectif</button>
+                <a id="btn-ajout" href="/task/new" class="btn btn-primary">Nouvel Objectif</a>
             </div>
 
             <div id="Objectifs">
