--- a/public/style/objectifs.css
+++ b/public/style/objectifs.css
@@ -24,11 +24,13 @@
 }
 
 #btn-ajout{
-    background: #E86C00;
-    font-size:large;
-    font-family: 'poppins';
-    color : white;
-    line-height: 0;
+    background-color: #E86C00;
+    border: none;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-size : x-large;
+    font-size: 2%;
+    padding: 1% 1%;
 }
 
 #non_selected{
