--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -14,10 +14,9 @@
         {% block body %}
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
             <script src="https://kit.fontawesome.com/a398bc3145.js" crossorigin="anonymous"></script>
-            <a id="logout" href="/logout"><i class="fa-solid fa-right-from-bracket"></i><a>
-            <h1>TITRE SITE</h1>
+            <a id="logout" href="/logout"><i class="fa-solid fa-right-from-bracket"></i></a>
+            <h1>Skopo</h1>
             <nav>
-                <hr/>
                 <a href="navbar.html"><i class="fa-solid fa-magnifying-glass"></i></a>
                 <a href="navbar.html" id ="selected_icon"><i class="fa-solid fa-house"></i></a>
                 <a href="navbar.html"><i class="fa-solid fa-user-group"></i></a>
