formulaire de contact

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -55,6 +55,6 @@
     </body>
     <footer>
     <hr/>
-    <p>© 2022 All Rights Reserved</p><button type="button" class="btn" id="btn-contact">Contactez nous</button>
+    <p>© 2022 All Rights Reserved</p><a href="https://forms.gle/WXmUe5uzpkLNBHVL8" class="btn" id="btn-contact">Contactez nous</a>
     </footer>
 </html>
