--- a/templates/Amis/Addfriends.html.twig
+++ b/templates/Amis/Addfriends.html.twig
@@ -1,11 +1,11 @@
 {% block stylesheets %}
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ asset('style/ajout_amis.css') }}">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
 {% endblock %}
 
 {% block body %}
+    <body id="ajout">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 
 {{ form_start(form) }}
@@ -14,6 +14,7 @@
         }) }}
     <button id="cherch" type="submit" class="btn">Rechercher</button> 
 {{ form_end(form) }}
+</body>
 {% endblock %}
 
 
