--- a/public/style/Admin/Category/new.css
+++ b/public/style/Admin/Category/new.css
@@ -27,3 +27,8 @@ form[name = "category"]{
     margin-top: 1vh;
 }
 
+#quitter{
+    font-size: 1vw;
+    margin-top: 1vh;
+    margin-left: 0.5vw;
+}
