--- a/public/style/Admin/Category/show.css
+++ b/public/style/Admin/Category/show.css
@@ -35,3 +35,9 @@ img{
     width : 30vw;
     margin-left: 35vw;
 }
+
+#quitter{
+    font-size: 1vw;
+    margin-top: 1vh;
+    margin-left: 0.5vw;
+}
