--- a/templates/admin_category/index.html.twig
+++ b/templates/admin_category/index.html.twig
@@ -10,6 +10,7 @@
 {% block title %}Liste des catégories{% endblock %}
 
 {% block body %}
+    <a id="quitter" class="btn btn-danger" href = "/admin">retour au menu principal</a>
     <h1>Liste des catégories</h1>
 
     <table class="table">
