--- a/public/style/admin.css
+++ b/public/style/admin.css
@@ -20,9 +20,21 @@ h1 {
     margin-top: 23vh;
 }
 
-.btn{
+.btn-primary{
     margin-bottom: 1vh;
     font-size: 2vw;
+    background-color: #E86C00;
+    border: none;
+    
+}
+
+.btn-primary:hover{
+    background-color : #ff6600;
+    color : lightslategray;
+}
+
+.btn-primary:active{
+    background-color : #ff6600; 
 }
 
 #quitter{
