--- a/templates/admin_task/index.html.twig
+++ b/templates/admin_task/index.html.twig
@@ -11,6 +11,7 @@
 {% block title %}Liste des tâches{% endblock %}
 
 {% block body %}
+    <a id="quitter" class="btn btn-danger" href = "/admin">retour au menu principal</a>
     <h1>Liste des tâches</h1>
 
     <table class="table">
