--- a/templates/admin_task_perso/index.html.twig
+++ b/templates/admin_task_perso/index.html.twig
@@ -11,6 +11,7 @@
 {% block title %}Liste des Tâches perso{% endblock %}
 
 {% block body %}
+    <a id="quitter" class="btn btn-danger" href = "/admin">retour au menu principal</a>
     <h1>Liste des Tâches perso</h1>
 
     <table class="table">
