--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -36,7 +36,7 @@
                 </br>
                 <span id="title">"{{title}}"</span>
                 <div class="progress">
-                    <div class="progress-bar w-{{level_percentage}}" role="progressbar" aria-label="Basic example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                    <div class="progress-bar" role="progressbar" aria-label="progress" style="width: {{level_percentage}}%" aria-valuenow="{{level_percentage}}" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
                 <span id="niveau">Niveau {{level}}</span>
                 </br>
